--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -24,7 +24,7 @@
             "name": "Python: testbench",
             "type": "python",
             "request": "launch",
-            "program": "/home/caillot/Documents/PhD/Projets/Coop-Evidential-Occupancy-Grid/standalone_project/full_project/testbench.py",
+            "program": "./Sources/testbench.py",
             "console": "integratedTerminal"
         },
         {
@@ -33,7 +33,7 @@
             "request": "launch",
             "module": "cProfile",
             "args": [
-                "-o", "/tmp/tmp.prof", "/home/caillot/Documents/PhD/Projets/Coop-Evidential-Occupancy-Grid/standalone_project/full_project/testbench.py"
+                "-o", "/tmp/tmp.prof", "./Sources/testbench.py"
             ]
         },
         {
