switch from cuda to gcc. opencv not working.

--- a/Sources/src_c/Makefile
+++ b/Sources/src_c/Makefile
@@ -1,12 +1,12 @@
-CXX=nvcc
-CFLAGS = -I/usr/include/opencv4/opencv -I/usr/include/opencv4
+CXX=g++
+CFLAGS = -I/usr/local/include/opencv4
 LIBS = -lopencv_stitching -lopencv_aruco -lopencv_bgsegm -lopencv_bioinspired -lopencv_ccalib -lopencv_dnn_objdetect -lopencv_dnn_superres -lopencv_dpm -lopencv_highgui -lopencv_face -lopencv_freetype -lopencv_fuzzy -lopencv_hdf -lopencv_hfs -lopencv_img_hash -lopencv_line_descriptor -lopencv_quality -lopencv_reg -lopencv_rgbd -lopencv_saliency -lopencv_shape -lopencv_stereo -lopencv_structured_light -lopencv_phase_unwrapping -lopencv_superres -lopencv_optflow -lopencv_surface_matching -lopencv_tracking -lopencv_datasets -lopencv_text -lopencv_dnn -lopencv_plot -lopencv_ml -lopencv_videostab -lopencv_videoio -lopencv_viz -lopencv_ximgproc -lopencv_video -lopencv_xobjdetect -lopencv_objdetect -lopencv_calib3d -lopencv_imgcodecs -lopencv_features2d -lopencv_flann -lopencv_xphoto -lopencv_photo -lopencv_imgproc -lopencv_core
 
 target_1=rasterizer
 target_2=merger
 target_3=decision
 
-targets := $(shell echo *.cu)
+targets := $(shell echo *.cpp)
 
 # gcc -shared -Wl,-soname,PixAvg -o PixAvg.so -fPIC fastAverage.c
 # --compiler-options '-fPIC'
@@ -18,7 +18,7 @@ targets := $(shell echo *.cu)
 
 # all: $(target_1).so $(target_1) $(target_2) $(target_2).so $(target_3) $(target_3).so
 
-all: $(targets:.cu=) $(targets:.cu=.so)
+all: $(targets:.cpp=) $(targets:.cpp=.so)
 
 %: %.o 
 	$(CXX) -o $@ $(CFLAGS) $(LIBS) $?
@@ -27,7 +27,7 @@ all: $(targets:.cu=) $(targets:.cu=.so)
 	$(CXX) --compiler-options '-fPIC' -shared $(CFLAGS) $(LIBS) $? -o $@ 
 	nm -gD $@ | grep ' T ' | grep -v '_Z'
 
-%.o: %.cu
+%.o: %.cpp
 	$(CXX) -std=c++11 -c -g --compiler-options '-fPIC' $(CFLAGS) $(LIBS) $?
 
 clean:
