--- a/Sources/configs/config_perfect_full_testBBA16.json
+++ b/Sources/configs/config_perfect_full_testBBA16.json
@@ -4,6 +4,10 @@
                 [0.0, 0.94, 0.0, 0.02, 0.0, 0.02, 0.02, 0.0],
                 [0.0, 0.0, 0.94, 0.02, 0.0, 0.02, 0.02, 0.0],
                 [0.0, 0.0, 0.0, 0.0, 0.75, 0.125, 0.125, 0.0]],
+    "FE_mat_infra":[[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1],
+                    [0.0, 0.94, 0.0, 0.02, 0.0, 0.02, 0.02, 0.0],
+                    [0.0, 0.0, 0.94, 0.02, 0.0, 0.02, 0.02, 0.0],
+                    [0.0, 0.0, 0.0, 0.0, 0.9, 0.05, 0.05, 0.0]],
     "noise": {
         "vehicle" : {
             "rot_err": {
